#
#############################################################################

########## RECENT CHANGE-LOG #########

  Note that we version STiki by the date (UTC locale) of the build-date. This
  is also the file-name under which the executable/source is released. The 
  formal version number (e.g., 2.1) is in too many places to be 
  conveniently altered for small changes:
  
  * 2016-XX-XX 
  		# Implemented API "thank" functionality (T#055).
  		# First attempt at solving MacOS GUI layout issues. Seemed to stem
  			from the fact MacOS enforces a border on JButtons (T#054).
  		# Minor change to make login error messages more descriptive
  
  * 2016-02-12 - EMERGENCY RELEASE
  		# Addition of a deprecation message to API login procedure fouled our
  		  parsing, breaking login functionality. Fixed and updated required.
  		# Cleaned up code transitioning to implicitly-managed CookieManager
  
  * 2016-01-22 - EMERGENCY RELEASE
  		# Seemingly related to WMF changes in the "SessionManager" module,
  		  the way STiki handles cookies needed to be modified. Because sessions
  		  were failing, edit tokens were not being obtained, and all
  		  revert/editing actions were failing. This breaks all functionality
  		  and an update requirement is being pushed. 
  		# Links fixed in the "AIV notification popup" dialog
  
  * 2015-07-02 - EMERGENCY RELEASE
  		# The WMF has changed the way pagination/continuation is handled for
  		  API queries that produce many results. This breaks some legacy code,
  		  but curiously, one can still use the "legacy approach" by providing
  		  an additional parameter with requests. Some more WMF details are at:
  			[https://lists.wikimedia.org/pipermail/wikitech-l/2015-June/081931.html].
  			Internal to STiki this primarily affects the permission check of 
  			"1000+ edits in NS0". Users who who rely on this criteria will likely
  			need to upgrade in order to use STiki. 
  			
  * 2015-06-13 - EMERGENCY RELEASE